--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@
 @tailwind utilities;
 
 * {
-  font-family: Poppins, sans-serif;
+  font-family: 'Poppins', sans-serif;
   /* font-weight: 400; */
   box-sizing: border-box;
 }
