--- a/client/src/index.css
+++ b/client/src/index.css
@@ -235,7 +235,7 @@ section.suggested-recipe-container {
   line-height: 30px;
   font-size: 16px;
   font-weight: 400;
-  margin: 40px 60px 60px;
+  /* margin: 40px 60px 60px; */
   padding-bottom: 40px;
 }
 
